LPS-129042-click-to-chat Add new provider TolvNow

--- a/modules/apps/click-to-chat/click-to-chat-web/src/main/resources/content/Language.properties
+++ b/modules/apps/click-to-chat/click-to-chat-web/src/main/resources/content/Language.properties
@@ -4,6 +4,7 @@ JIVOCHAT=JivoChat
 LIVEPERSON=Liveperson
 SMARTSUPP=Smartsupp
 TIDIO=Tidio
+TOLVNOW=TolvNow
 category-section.solution-desk=Solution Desk
 category.click-to-chat=Click to Chat
 category.click-to-chat-configuration=Click to Chat
